GRAPH-841 WIP commit